[gd_scene load_steps=14 format=3 uid="uid://daqwbkemrd3vb"]

[ext_resource type="Texture2D" uid="uid://dr3fu5ddsblxq" path="res://sprites/Sprite Pack 5/5 - Moe Scotty/Flying_(32 x 32).png" id="1_mth0i"]
[ext_resource type="Script" uid="uid://bsaue4x0q8tcp" path="res://scripts/enemy_3.gd" id="1_oatjh"]
[ext_resource type="Texture2D" uid="uid://o7bdn8m0ff4v" path="res://sprites/Sprite Pack 5/5 - Moe Scotty/Hurt_(32 x 32).png" id="2_oatjh"]
[ext_resource type="Texture2D" uid="uid://bcv8tqd5w7ucw" path="res://sprites/Sprite Pack 5/5 - Moe Scotty/Sting_Attack_(32 x 32).png" id="3_jujfx"]
[ext_resource type="PackedScene" uid="uid://de03w2gt8o8jb" path="res://prefabs/hitbox.tscn" id="3_oatjh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jujfx"]
height = 22.0

[sub_resource type="Animation" id="Animation_lqm0e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_mth0i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mth0i"]
resource_name = "attack"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_jujfx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0h1dw"]
resource_name = "fly"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_mth0i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_oatjh"]
resource_name = "hurt"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_oatjh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ariyy"]
_data = {
&"RESET": SubResource("Animation_lqm0e"),
&"attack": SubResource("Animation_mth0i"),
&"fly": SubResource("Animation_0h1dw"),
&"hurt": SubResource("Animation_oatjh")
}

[sub_resource type="GDScript" id="GDScript_jujfx"]
script/source = "extends AnimationPlayer


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hwii6"]
size = Vector2(8, 10)

[node name="enemy_3" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_oatjh")

[node name="texture" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, 5)
scale = Vector2(0.625, 0.6875)
texture = ExtResource("1_mth0i")
hframes = 4

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_jujfx")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ariyy")
}
autoplay = "fly"
speed_scale = 0.5
movie_quit_on_finish = true
script = SubResource("GDScript_jujfx")

[node name="wall_detector" type="RayCast2D" parent="."]
position = Vector2(1, 8)
target_position = Vector2(-15, 5)
collision_mask = 6

[node name="fall_detector" type="RayCast2D" parent="."]
position = Vector2(3, 5)
target_position = Vector2(-7, 16)
collision_mask = 6

[node name="hurtbox" parent="." instance=ExtResource("3_oatjh")]

[node name="Collision1" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(-2, 9)
shape = SubResource("RectangleShape2D_hwii6")
debug_color = Color(0.994674, 0.0661003, 0, 0.42)

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
